// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`versioned Motion Recipes > validates and snapshots basic-attack 1`] = `
{
  "family": "combat",
  "grounding": "grounded",
  "id": "basic-attack",
  "intensity": "high",
  "phases": [
    "ready",
    "anticipation",
    "wind-up",
    "strike",
    "impact",
    "follow-through",
    "recover",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: basic-attack v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Generic forward armed or unarmed attack with a planted pivot foot, readable strike direction, compact lunge, impact, and recovery. Keep the lower body stable and the strike, hand, weapon, and any tiny trail within the cell. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: anticipation. Frames 3-3: wind-up. Frames 4-4: strike. Frames 5-5: impact. Frames 6-6: follow-through. Frames 7-7: recover. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-soft",
    "allowedVfx": [
      "small slash arc",
      "small hit spark",
    ],
    "expectedPhases": [
      "ready",
      "anticipation",
      "wind-up",
      "strike",
      "impact",
      "follow-through",
      "recover",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.3,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "basic-attack",
      "qualityProfile": "grounded-soft",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots death-downed 1`] = `
{
  "family": "combat",
  "grounding": "downed",
  "id": "death-downed",
  "intensity": "high",
  "phases": [
    "lose balance",
    "collapse begins",
    "fall or kneel",
    "ground contact",
    "downed pose",
    "settle",
    "final still",
    "final hold",
  ],
  "promptHead": [
    "HARD: Motion Recipe: death-downed v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Game-style non-gory defeat that collapses or kneels into a compact, readable, mostly still downed pose. Prefer kneeling, slumped, seated, or compact fallen poses over a full sideways corpse. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: lose balance. Frames 2-2: collapse begins. Frames 3-3: fall or kneel. Frames 4-4: ground contact. Frames 5-5: downed pose. Frames 6-6: settle. Frames 7-7: final still. Frames 8-8: final hold.",
  ],
  "qa": {
    "actionProfile": "airborne-or-exempt",
    "allowedVfx": [],
    "expectedPhases": [
      "lose balance",
      "collapse begins",
      "fall or kneel",
      "ground contact",
      "downed pose",
      "settle",
      "final still",
      "final hold",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 18,
    "fps": 8,
    "frameCount": 8,
    "groundingProfile": "downed",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.42,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "death-downed",
      "qualityProfile": "airborne-or-exempt",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 22,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    8,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots guard-block 1`] = `
{
  "family": "combat",
  "grounding": "grounded",
  "id": "guard-block",
  "intensity": "moderate",
  "phases": [
    "ready",
    "raise guard",
    "brace",
    "hold",
    "absorb",
    "recoil",
    "recover",
    "guard end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: guard-block v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Readable defensive brace using arms, weapon, staff, shield, or body stance without hiding the character. It must read as defense even without a shield. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: raise guard. Frames 3-3: brace. Frames 4-4: hold. Frames 5-5: absorb. Frames 6-6: recoil. Frames 7-7: recover. Frames 8-8: guard end.",
  ],
  "qa": {
    "actionProfile": "grounded-strict",
    "allowedVfx": [
      "tiny impact spark",
      "small shield flash",
    ],
    "expectedPhases": [
      "ready",
      "raise guard",
      "brace",
      "hold",
      "absorb",
      "recoil",
      "recover",
      "guard end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 10,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.001,
      0.16,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "guard-block",
      "qualityProfile": "grounded-strict",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    10,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots hurt-reaction 1`] = `
{
  "family": "combat",
  "grounding": "grounded",
  "id": "hurt-reaction",
  "intensity": "moderate",
  "phases": [
    "ready",
    "hit start",
    "recoil",
    "recoil peak",
    "brace",
    "regain balance",
    "settle",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: hurt-reaction v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Brief non-gory hit reaction using torso angle, head jolt, shoulder lift, and a bracing foot without collapsing. Make the recoil distinct from attack, jump, and downed animations. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: hit start. Frames 3-3: recoil. Frames 4-4: recoil peak. Frames 5-5: brace. Frames 6-6: regain balance. Frames 7-7: settle. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-soft",
    "allowedVfx": [
      "tiny hit spark",
    ],
    "expectedPhases": [
      "ready",
      "hit start",
      "recoil",
      "recoil peak",
      "brace",
      "regain balance",
      "settle",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.3,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "hurt-reaction",
      "qualityProfile": "grounded-soft",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots idle-breathing 1`] = `
{
  "family": "core",
  "grounding": "grounded",
  "id": "idle-breathing",
  "intensity": "subtle",
  "phases": [
    "neutral",
    "inhale",
    "secondary rise",
    "top of breath",
    "exhale",
    "secondary settle",
    "return",
    "loop bridge",
  ],
  "promptHead": [
    "HARD: Motion Recipe: idle-breathing v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Idle breathing ready stance with planted feet, a visible 2-4px shoulder and chest rise, controlled inhale/exhale, and a stable center. Feet remain planted on the exact baseline; no stepping, walking, hopping, or nearly identical frames. hair, hood, clothing, and backpack follow the breath with a small delay",
    "PHASES: Frames 1-1: neutral. Frames 2-2: inhale. Frames 3-3: secondary rise. Frames 4-4: top of breath. Frames 5-5: exhale. Frames 6-6: secondary settle. Frames 7-7: return. Frames 8-8: loop bridge.",
  ],
  "qa": {
    "actionProfile": "subtle-loop",
    "allowedVfx": [],
    "expectedPhases": [
      "neutral",
      "inhale",
      "secondary rise",
      "top of breath",
      "exhale",
      "secondary settle",
      "return",
      "loop bridge",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": true,
    "loopMode": "loop",
    "motionRange": [
      0.0015,
      0.08,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "idle-breathing",
      "qualityProfile": "subtle-loop",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "loop",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots interact-pickup 1`] = `
{
  "family": "utility",
  "grounding": "grounded",
  "id": "interact-pickup",
  "intensity": "moderate",
  "phases": [
    "ready",
    "look",
    "reach",
    "bend or pickup",
    "inspect",
    "return upward",
    "settle",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: interact-pickup v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Generic interact, inspect, or pickup action with readable hands and a compact upper-body bend. Any item remains small; avoid a crouch that crushes the silhouette. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: look. Frames 3-3: reach. Frames 4-4: bend or pickup. Frames 5-5: inspect. Frames 6-6: return upward. Frames 7-7: settle. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-strict",
    "allowedVfx": [],
    "expectedPhases": [
      "ready",
      "look",
      "reach",
      "bend or pickup",
      "inspect",
      "return upward",
      "settle",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 10,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.001,
      0.16,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "interact-pickup",
      "qualityProfile": "grounded-strict",
      "version": 1,
    },
    "requiredProps": [
      "optional small interaction item",
    ],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    10,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots item-use 1`] = `
{
  "family": "utility",
  "grounding": "grounded",
  "id": "item-use",
  "intensity": "moderate",
  "phases": [
    "ready",
    "draw item",
    "present item",
    "use item",
    "tiny read beat",
    "put away",
    "settle",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: item-use v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Upright hand-focused item use with a compact potion, scroll, bottle, charm, ration, card, device, or tool. Keep the item near the body and do not bend toward the floor. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: draw item. Frames 3-3: present item. Frames 4-4: use item. Frames 5-5: tiny read beat. Frames 6-6: put away. Frames 7-7: settle. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-strict",
    "allowedVfx": [
      "tiny confirmation spark",
    ],
    "expectedPhases": [
      "ready",
      "draw item",
      "present item",
      "use item",
      "tiny read beat",
      "put away",
      "settle",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 10,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.001,
      0.16,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "item-use",
      "qualityProfile": "grounded-strict",
      "version": 1,
    },
    "requiredProps": [
      "one small generic item",
    ],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    10,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots jump-hop 1`] = `
{
  "family": "locomotion",
  "grounding": "airborne",
  "id": "jump-hop",
  "intensity": "high",
  "phases": [
    "ready",
    "crouch",
    "push-off",
    "rising",
    "apex",
    "falling",
    "landing squash",
    "settle",
  ],
  "promptHead": [
    "HARD: Motion Recipe: jump-hop v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Small in-place jump with crouch, push-off, apex, fall, landing squash, and a return to the original center and baseline. Leave generous top padding for hair, hats, ears, staff, and weapons. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: crouch. Frames 3-3: push-off. Frames 4-4: rising. Frames 5-5: apex. Frames 6-6: falling. Frames 7-7: landing squash. Frames 8-8: settle.",
  ],
  "qa": {
    "actionProfile": "airborne-or-exempt",
    "allowedVfx": [],
    "expectedPhases": [
      "ready",
      "crouch",
      "push-off",
      "rising",
      "apex",
      "falling",
      "landing squash",
      "settle",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 18,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "airborne",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.42,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "jump-hop",
      "qualityProfile": "airborne-or-exempt",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 18,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots knockback 1`] = `
{
  "family": "combat",
  "grounding": "exempt",
  "id": "knockback",
  "intensity": "high",
  "phases": [
    "ready",
    "impact",
    "lean back",
    "recoil peak",
    "stumble",
    "regain footing",
    "settle",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: knockback v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Strong non-gory knockback with torso recoil, compact backward slide, bracing foot, stumble, and full recovery. Stronger than Hurt Reaction but never becomes a defeated/downed pose. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: impact. Frames 3-3: lean back. Frames 4-4: recoil peak. Frames 5-5: stumble. Frames 6-6: regain footing. Frames 7-7: settle. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "airborne-or-exempt",
    "allowedVfx": [
      "tiny hit spark",
    ],
    "expectedPhases": [
      "ready",
      "impact",
      "lean back",
      "recoil peak",
      "stumble",
      "regain footing",
      "settle",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 18,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "exempt",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.42,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "knockback",
      "qualityProfile": "airborne-or-exempt",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots ranged-attack 1`] = `
{
  "family": "combat",
  "grounding": "grounded",
  "id": "ranged-attack",
  "intensity": "high",
  "phases": [
    "ready",
    "aim",
    "draw or charge",
    "release",
    "tiny shot",
    "follow-through",
    "recover",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: ranged-attack v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Generic ranged action for bows, throws, staffs, or light shots with a compact forward release. Use one consistent tiny projectile no larger than about 20x20px near the hand or weapon tip. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: aim. Frames 3-3: draw or charge. Frames 4-4: release. Frames 5-5: tiny shot. Frames 6-6: follow-through. Frames 7-7: recover. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-soft",
    "allowedVfx": [
      "one tiny projectile",
      "small release spark",
    ],
    "expectedPhases": [
      "ready",
      "aim",
      "draw or charge",
      "release",
      "tiny shot",
      "follow-through",
      "recover",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.3,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "ranged-attack",
      "qualityProfile": "grounded-soft",
      "version": 1,
    },
    "requiredProps": [
      "preserve source ranged prop or add one compact generic prop",
    ],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots run-cycle 1`] = `
{
  "family": "locomotion",
  "grounding": "airborne",
  "id": "run-cycle",
  "intensity": "high",
  "phases": [
    "right-lead stride",
    "stride narrows",
    "feet together",
    "crossover",
    "left lead begins",
    "left reach",
    "airborne stride",
    "left-lead endpoint",
  ],
  "promptHead": [
    "HARD: Motion Recipe: run-cycle v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Generate one run half-cycle: the right-leading stride crosses through mandatory feet-together passing poses into the left-leading stride. Playback appends the reverse order for a 16-frame ping-pong cycle; do not squeeze both full halves into the source frames. forward torso lean, strong opposite arm drive, hair and clothing lag",
    "PHASES: Frames 1-1: right-lead stride. Frames 2-2: stride narrows. Frames 3-3: feet together. Frames 4-4: crossover. Frames 5-5: left lead begins. Frames 6-6: left reach. Frames 7-7: airborne stride. Frames 8-8: left-lead endpoint.",
  ],
  "qa": {
    "actionProfile": "airborne-or-exempt",
    "allowedVfx": [],
    "expectedPhases": [
      "right-lead stride",
      "stride narrows",
      "feet together",
      "crossover",
      "left lead begins",
      "left reach",
      "airborne stride",
      "left-lead endpoint",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "ping-pong-reverse",
    },
    "footlineTolerancePx": 18,
    "fps": 20,
    "frameCount": 8,
    "groundingProfile": "airborne",
    "loopExpected": true,
    "loopMode": "ping-pong",
    "motionRange": [
      0.004,
      0.42,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "run-cycle",
      "qualityProfile": "airborne-or-exempt",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 18,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "ping-pong",
    20,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots skill-release 1`] = `
{
  "family": "magic",
  "grounding": "grounded",
  "id": "skill-release",
  "intensity": "high",
  "phases": [
    "ready",
    "focus",
    "compress energy",
    "release",
    "peak effect",
    "recoil",
    "settle",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: skill-release v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Compact skill activation emphasizing frames 4-5, with energy attached to hand, chest, weapon, or feet while the silhouette stays visible. This is the release moment, not a long cast or detached ranged weapon attack. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: focus. Frames 3-3: compress energy. Frames 4-4: release. Frames 5-5: peak effect. Frames 6-6: recoil. Frames 7-7: settle. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-soft",
    "allowedVfx": [
      "compact attached burst",
    ],
    "expectedPhases": [
      "ready",
      "focus",
      "compress energy",
      "release",
      "peak effect",
      "recoil",
      "settle",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.004,
      0.3,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "skill-release",
      "qualityProfile": "grounded-soft",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    12,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots spell-cast 1`] = `
{
  "family": "magic",
  "grounding": "grounded",
  "id": "spell-cast",
  "intensity": "moderate",
  "phases": [
    "ready",
    "raise focus",
    "charge",
    "bright charge",
    "release",
    "follow-through",
    "settle",
    "ready end",
  ],
  "promptHead": [
    "HARD: Motion Recipe: spell-cast v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Grounded spell cast with planted feet or anchored robe hem and a compact charge/release at the hand, staff, book, or focus. Use one consistent effect color, size, and attachment point across directions. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: raise focus. Frames 3-3: charge. Frames 4-4: bright charge. Frames 5-5: release. Frames 6-6: follow-through. Frames 7-7: settle. Frames 8-8: ready end.",
  ],
  "qa": {
    "actionProfile": "grounded-strict",
    "allowedVfx": [
      "small attached magic charge",
      "compact release",
    ],
    "expectedPhases": [
      "ready",
      "raise focus",
      "charge",
      "bright charge",
      "release",
      "follow-through",
      "settle",
      "ready end",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 10,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": false,
    "loopMode": "one-shot",
    "motionRange": [
      0.001,
      0.16,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "spell-cast",
      "qualityProfile": "grounded-strict",
      "version": 1,
    },
    "requiredProps": [
      "preserve source focus prop when present",
    ],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "one-shot",
    10,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots talk 1`] = `
{
  "family": "social",
  "grounding": "grounded",
  "id": "talk",
  "intensity": "subtle",
  "phases": [
    "neutral",
    "gesture begins",
    "small nod",
    "gesture peak",
    "blink or settle",
    "second gesture",
    "return",
    "loop bridge",
  ],
  "promptHead": [
    "HARD: Motion Recipe: talk v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Restrained NPC conversation loop using small hand gestures, nods, shoulders, blink, and a clean bridge. Keep feet planted; conversation must remain readable even when pixel-art mouth motion is tiny. small shoulder and clothing follow-through supports the restrained gestures",
    "PHASES: Frames 1-1: neutral. Frames 2-2: gesture begins. Frames 3-3: small nod. Frames 4-4: gesture peak. Frames 5-5: blink or settle. Frames 6-6: second gesture. Frames 7-7: return. Frames 8-8: loop bridge.",
  ],
  "qa": {
    "actionProfile": "subtle-loop",
    "allowedVfx": [],
    "expectedPhases": [
      "neutral",
      "gesture begins",
      "small nod",
      "gesture peak",
      "blink or settle",
      "second gesture",
      "return",
      "loop bridge",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 10,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": true,
    "loopMode": "loop",
    "motionRange": [
      0.0015,
      0.08,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "talk",
      "qualityProfile": "subtle-loop",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "loop",
    10,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots victory-cheer 1`] = `
{
  "family": "social",
  "grounding": "grounded",
  "id": "victory-cheer",
  "intensity": "moderate",
  "phases": [
    "ready",
    "arm rises",
    "cheer peak",
    "small bounce",
    "wave or hold",
    "settle",
    "proud pose",
    "loop bridge",
  ],
  "promptHead": [
    "HARD: Motion Recipe: victory-cheer v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Expressive victory cheer or wave using arms, head, clothing, and only a small celebratory bounce. Keep it distinct from jump by preserving a stable landing baseline. hair and clothing follow-through must lag the body motion without replacing the primary action",
    "PHASES: Frames 1-1: ready. Frames 2-2: arm rises. Frames 3-3: cheer peak. Frames 4-4: small bounce. Frames 5-5: wave or hold. Frames 6-6: settle. Frames 7-7: proud pose. Frames 8-8: loop bridge.",
  ],
  "qa": {
    "actionProfile": "grounded-soft",
    "allowedVfx": [],
    "expectedPhases": [
      "ready",
      "arm rises",
      "cheer peak",
      "small bounce",
      "wave or hold",
      "settle",
      "proud pose",
      "loop bridge",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 10,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": true,
    "loopMode": "loop",
    "motionRange": [
      0.004,
      0.3,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "victory-cheer",
      "qualityProfile": "grounded-soft",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "loop",
    10,
    8,
  ],
  "version": 1,
}
`;

exports[`versioned Motion Recipes > validates and snapshots walk-cycle 1`] = `
{
  "family": "locomotion",
  "grounding": "grounded",
  "id": "walk-cycle",
  "intensity": "moderate",
  "phases": [
    "left contact",
    "left down",
    "left passing",
    "right reach",
    "right contact",
    "right down",
    "right passing",
    "left reach bridge",
  ],
  "promptHead": [
    "HARD: Motion Recipe: walk-cycle v1; compiler 1.0.0. Create exactly eight source frames for each requested direction. Use fixed 256px by 256px cells and keep every frame isolated inside its own cell.",
    "MOTION: Alternating walk cycle with clear contact, passing, opposite arm swing, modest stride, knee bend, toe contact, and no airborne frame. At least one foot stays near the ground; frame 1 and frame 5 must show clearly different contact silhouettes. subtle torso bob and hair or clothing follow-through support visible leg motion",
    "PHASES: Frames 1-1: left contact. Frames 2-2: left down. Frames 3-3: left passing. Frames 4-4: right reach. Frames 5-5: right contact. Frames 6-6: right down. Frames 7-7: right passing. Frames 8-8: left reach bridge.",
  ],
  "qa": {
    "actionProfile": "grounded-soft",
    "allowedVfx": [],
    "expectedPhases": [
      "left contact",
      "left down",
      "left passing",
      "right reach",
      "right contact",
      "right down",
      "right passing",
      "left reach bridge",
    ],
    "exportDefaults": {
      "anchor": {
        "x": 0.5,
        "y": 0.9,
      },
      "background": "transparent",
      "cell": {
        "height": 256,
        "width": 256,
      },
      "playback": "normal",
    },
    "footlineTolerancePx": 8,
    "fps": 12,
    "frameCount": 8,
    "groundingProfile": "grounded",
    "loopExpected": true,
    "loopMode": "loop",
    "motionRange": [
      0.004,
      0.3,
    ],
    "recipe": {
      "compilerVersion": "1.0.0",
      "id": "walk-cycle",
      "qualityProfile": "grounded-soft",
      "version": 1,
    },
    "requiredProps": [],
    "rootDriftTolerancePx": 10,
  },
  "sectionOrder": [
    "hard",
    "motion",
    "phases",
    "identity",
    "direction",
    "background",
    "negative",
  ],
  "timing": [
    "loop",
    12,
    8,
  ],
  "version": 1,
}
`;
